# security-log

./: .gitignore  .stylish-haskell.yaml  .travis.yml  LICENSE  README.md  security-log.cabal  security-log.yaml  stack.yaml
src/: Analyses.hs  Config.hs  Database.hs  Email.hs  Main.hs
src/Analyses/: .ObjectReference.hs.swp  Injection.hs  ObjectReference.hs  Xss.hs
src/Data/: App.hs  Incident.hs  Log.hs
src/Data/Config/: Args.hs  Config.hs  InputConfig.hs  OutputConfig.hs  ServerType.hs
src/Input/: Database.hs
src/Input/File/: Apache.hs  File.hs  Nginx.hs
test/: Helper.hs
test/Analyses/: InjectionSpec.hs  ObjectReferenceSpec.hs  XssSpec.hs
test/performance/: Stream.hs
test/unit/Analyses/: Helper.hs  InjectionSpec.hs  ObjectReferenceSpec.hs  XssSpec.hs
